--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nebular/theme": "^11.0.1",
     "eva-icons": "^1.1.3",
     "net": "^1.0.2",
+    "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
