--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
               "src/styles.css",
               "node_modules/@nebular/theme/styles/prebuilt/default.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/main.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -89,9 +91,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@nebular/theme/styles/prebuilt/default.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           }
         }
       }
