--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eva-icons": "^1.1.3",
     "net": "^1.0.2",
     "ng-openapi-gen": "^0.51.0",
+    "ngx-socket-io": "^4.4.0",
     "rxjs": "~7.8.0",
+    "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
