--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/theme": "^11.0.1",
+    "bootstrap": "^5.3.3",
     "eva-icons": "^1.1.3",
+    "jquery": "^3.7.1",
     "net": "^1.0.2",
     "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
