--- a/angular.json
+++ b/angular.json
@@ -95,6 +95,9 @@
               "node_modules/@nebular/theme/styles/prebuilt/default.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           }
         }
