--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.0",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/theme": "^11.0.1",
+    "bootstrap": "^5.3.3",
     "eva-icons": "^1.1.3",
     "net": "^1.0.2",
     "ng-openapi-gen": "^0.51.0",
