--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "maryem-api-gen":"ng-openapi-gen --input ./src/app/swagger/swagger-maryem.json --output ./src/app/services/maryem-services"
   },
   "private": true,
   "dependencies": {
