--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/theme": "^11.0.1",
     "bootstrap": "^5.3.3",
     "eva-icons": "^1.1.3",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "net": "^1.0.2",
     "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
