--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
+    "startbootstrap-shop-item": "^5.0.6",
     "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
