--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "ng test",
     "api-gen-bal-de-projet": "ng-openapi-gen --input ./src/app/swagger/swagger-radhouene.json --output src/app/services/radhouene/",
     "api-gen-ahmed": "ng-openapi-gen --input ./src/app/swagger/swagger-ahmed.json --output src/app/services/Role/"
-
   },
   "private": true,
   "dependencies": {
@@ -27,6 +26,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/theme": "^11.0.1",
+    "@sweetalert2/ngx-sweetalert2": "^12.3.0",
     "bootstrap": "^5.3.3",
     "eva-icons": "^1.1.3",
     "jquery": "^3.7.1",
@@ -40,6 +40,7 @@
     "startbootstrap-creative": "^7.0.7",
     "startbootstrap-shop-item": "^5.0.6",
     "stompjs": "^2.3.3",
+    "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
     "tsparticles": "^3.3.0",
     "zone.js": "~0.12.0"
